fix(embed) don't let iframes overflow

--- a/src/wp-content/themes/grossartig/scss/article.scss
+++ b/src/wp-content/themes/grossartig/scss/article.scss
@@ -28,6 +28,7 @@
     iframe {
       display: block;
       margin: auto;
+      max-width: 100%;
     }
   }
 }
